--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\""
   },
   "author": "",
   "license": "ISC",
